VC9 projectfile update

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -15216,6 +15216,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\src\game_end_exceptions.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\src\game_end_exceptions.hpp"
 			>
 		</File>
