CB projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -266,6 +266,7 @@
 		<Unit filename="..\..\src\game_controller_new.hpp" />
 		<Unit filename="..\..\src\game_display.cpp" />
 		<Unit filename="..\..\src\game_display.hpp" />
+		<Unit filename="..\..\src\game_end_exceptions.cpp" />
 		<Unit filename="..\..\src\game_end_exceptions.hpp" />
 		<Unit filename="..\..\src\game_errors.cpp" />
 		<Unit filename="..\..\src\game_errors.hpp" />
