--- a/projectfiles/VC10/wesnoth.vcxproj
+++ b/projectfiles/VC10/wesnoth.vcxproj
@@ -156,6 +156,11 @@
     <None Include="..\..\src\language_win32.ii" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\addon\client.cpp">
+      <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug (fast)|Win32'">$(IntDir)Addon\</ObjectFileName>
+      <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)Addon\</ObjectFileName>
+      <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(IntDir)Addon\</ObjectFileName>
+    </ClCompile>
     <ClCompile Include="..\..\src\addon\manager.cpp">
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug (fast)|Win32'">$(IntDir)Addon\</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)Addon\</ObjectFileName>
@@ -416,6 +421,7 @@
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)Editor\</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(IntDir)Editor\</ObjectFileName>
     </ClCompile>
+    <ClCompile Include="..\..\src\game_end_exceptions.cpp" />
     <ClCompile Include="..\..\src\gui\dialogs\addon\uninstall_list.cpp">
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)Gui\Dialogs\</ObjectFileName>
     </ClCompile>
@@ -427,6 +433,11 @@
     <ClCompile Include="..\..\src\gui\dialogs\folder_create.cpp">
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)Gui\Dialogs\</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug (fast)|Win32'">$(IntDir)Gui\Dialogs\</ObjectFileName>
+      <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(IntDir)Gui\Dialogs\</ObjectFileName>
+    </ClCompile>
+    <ClCompile Include="..\..\src\gui\dialogs\mp_host_game_prompt.cpp">
+      <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug (fast)|Win32'">$(IntDir)Gui\Dialogs\</ObjectFileName>
+      <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)Gui\Dialogs\</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(IntDir)Gui\Dialogs\</ObjectFileName>
     </ClCompile>
     <ClCompile Include="..\..\src\gui\widgets\button.cpp">
@@ -458,6 +469,7 @@
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug (fast)|Win32'">$(IntDir)Gui\Widgets\</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)Gui\Widgets\</ObjectFileName>
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(IntDir)Gui\Widgets\</ObjectFileName>
+      <DisableSpecificWarnings Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">4127;4512;4505;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <ClCompile Include="..\..\src\gui\widgets\grid.cpp">
       <ObjectFileName Condition="'$(Configuration)|$(Platform)'=='Debug (fast)|Win32'">$(IntDir)Gui\Widgets\</ObjectFileName>
@@ -1402,6 +1414,7 @@
     <ClCompile Include="..\..\src\wml_exception.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\addon\client.hpp" />
     <ClInclude Include="..\..\src\addon\manager.hpp" />
     <ClInclude Include="..\..\src\addon\validation.hpp" />
     <ClInclude Include="..\..\src\ai\actions.hpp" />
@@ -1460,6 +1473,7 @@
     <ClInclude Include="..\..\src\gui\dialogs\addon\uninstall_list.hpp" />
     <ClInclude Include="..\..\src\gui\dialogs\editor_set_starting_position.hpp" />
     <ClInclude Include="..\..\src\gui\dialogs\folder_create.hpp" />
+    <ClInclude Include="..\..\src\gui\dialogs\mp_host_game_prompt.hpp" />
     <ClInclude Include="..\..\src\gui\widgets\button.hpp" />
     <ClInclude Include="..\..\src\gui\widgets\container.hpp" />
     <ClInclude Include="..\..\src\gui\widgets\control.hpp" />
