--- a/projectfiles/VC10/wesnoth.vcxproj.filters
+++ b/projectfiles/VC10/wesnoth.vcxproj.filters
@@ -910,6 +910,14 @@
     <ClCompile Include="..\..\src\gui\dialogs\editor_set_starting_position.cpp">
       <Filter>Gui\Dialogs</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\gui\dialogs\chat_log.cpp" />
+    <ClCompile Include="..\..\src\gui\dialogs\mp_host_game_prompt.cpp">
+      <Filter>Gui\Dialogs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\addon\client.cpp">
+      <Filter>Addon</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\game_end_exceptions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\addon\manager.hpp">
@@ -1770,6 +1778,13 @@
     </ClInclude>
     <ClInclude Include="..\..\src\gui\dialogs\editor_set_starting_position.hpp">
       <Filter>Gui\Dialogs</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\gui\dialogs\chat_log.hpp" />
+    <ClInclude Include="..\..\src\gui\dialogs\mp_host_game_prompt.hpp">
+      <Filter>Gui\Dialogs</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\addon\client.hpp">
+      <Filter>Addon</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
