--- a/utils/umc_dev/org.wesnoth.tests/.settings/org.eclipse.jdt.ui.prefs
+++ b/utils/umc_dev/org.wesnoth.tests/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,4 @@
-#Sat Aug 06 22:10:59 EEST 2011
+#Sat Feb 11 10:23:20 EET 2012
 cleanup.add_default_serial_version_id=false
 cleanup.add_generated_serial_version_id=true
 cleanup.add_missing_annotations=true
@@ -54,7 +54,7 @@ cleanup_profile=_timo
 cleanup_settings_version=2
 eclipse.preferences.version=1
 editor_save_participant_org.eclipse.jdt.ui.postsavelistener.cleanup=true
-formatter_profile=_Timo_new
+formatter_profile=_Profile
 formatter_settings_version=12
 org.eclipse.jdt.ui.exception.name=e
 org.eclipse.jdt.ui.gettersetter.use.is=true
