Remove custom pool memory allocator per wesnoth-dev mailing list discussion
This affects the cmake and scons scripts, and various project files in
projectfiles/. I have only tested my changes to scons (and loonycyborg
might still want to review the diff regarding a line in src/SConscript
involving game.cpp).

--- a/projectfiles/CodeBlocks-SCons/wesnoth.cbp
+++ b/projectfiles/CodeBlocks-SCons/wesnoth.cbp
@@ -211,9 +211,7 @@
 		<Unit filename="../../src/formula_string_utils.hpp" />
 		<Unit filename="../../src/formula_tokenizer.cpp" />
 		<Unit filename="../../src/formula_tokenizer.hpp" />
-		<Unit filename="../../src/game.cpp">
-			<Option compiler="gcc" use="1" buildCommand="$compiler $options -DDISABLE_POOL_ALLOC $includes -c $file -o $object" />
-		</Unit>
+		<Unit filename="../../src/game.cpp" />
 		<Unit filename="../../src/game_config.cpp" />
 		<Unit filename="../../src/game_config.hpp" />
 		<Unit filename="../../src/game_display.cpp" />
@@ -517,10 +515,6 @@
 		<Unit filename="../../src/lobby_preferences.hpp" />
 		<Unit filename="../../src/log.cpp" />
 		<Unit filename="../../src/log.hpp" />
-		<Unit filename="../../src/malloc.c">
-			<Option compilerVar="CC" />
-			<Option compiler="gcc" use="1" buildCommand="$compiler $options -DDISABLE_POOL_ALLOC $includes -c $file -o $object" />
-		</Unit>
 		<Unit filename="../../src/map.cpp" />
 		<Unit filename="../../src/map.hpp" />
 		<Unit filename="../../src/map_create.cpp" />
@@ -584,10 +578,6 @@
 		<Unit filename="../../src/playsingle_controller.hpp" />
 		<Unit filename="../../src/playturn.cpp" />
 		<Unit filename="../../src/playturn.hpp" />
-		<Unit filename="../../src/poolalloc.c">
-			<Option compilerVar="CC" />
-			<Option compiler="gcc" use="1" buildCommand="$compiler $options -DDISABLE_POOL_ALLOC $includes -c $file -o $object" />
-		</Unit>
 		<Unit filename="../../src/portrait.cpp" />
 		<Unit filename="../../src/portrait.hpp" />
 		<Unit filename="../../src/preferences.cpp" />
