--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -253,9 +253,7 @@
 		<Unit filename="..\..\src\formula_string_utils.hpp" />
 		<Unit filename="..\..\src\formula_tokenizer.cpp" />
 		<Unit filename="..\..\src\formula_tokenizer.hpp" />
-		<Unit filename="..\..\src\game.cpp">
-			<Option compiler="gcc" use="1" buildCommand="$compiler $options -DDISABLE_POOL_ALLOC $includes -c $file -o $object" />
-		</Unit>
+		<Unit filename="..\..\src\game.cpp" />
 		<Unit filename="..\..\src\game_config.cpp" />
 		<Unit filename="..\..\src\game_config.hpp" />
 		<Unit filename="..\..\src\game_controller.cpp" />
@@ -641,10 +639,6 @@
 		<Unit filename="..\..\src\lua\lzio.h" />
 		<Unit filename="..\..\src\lua_jailbreak_exception.cpp" />
 		<Unit filename="..\..\src\lua_jailbreak_exception.hpp" />
-		<Unit filename="..\..\src\malloc.c">
-			<Option compilerVar="CC" />
-			<Option compiler="gcc" use="1" buildCommand="$compiler $options -DDISABLE_POOL_ALLOC $includes -c $file -o $object" />
-		</Unit>
 		<Unit filename="..\..\src\map.cpp" />
 		<Unit filename="..\..\src\map.hpp" />
 		<Unit filename="..\..\src\map_create.cpp" />
@@ -713,10 +707,6 @@
 		<Unit filename="..\..\src\playsingle_controller.hpp" />
 		<Unit filename="..\..\src\playturn.cpp" />
 		<Unit filename="..\..\src\playturn.hpp" />
-		<Unit filename="..\..\src\poolalloc.c">
-			<Option compilerVar="CC" />
-			<Option compiler="gcc" use="1" buildCommand="$compiler $options -DDISABLE_POOL_ALLOC $includes -c $file -o $object" />
-		</Unit>
 		<Unit filename="..\..\src\portrait.cpp" />
 		<Unit filename="..\..\src\portrait.hpp" />
 		<Unit filename="..\..\src\preferences.cpp" />
