--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -84,6 +84,7 @@
 		<Unit filename="..\..\src\actions.hpp" />
 		<Unit filename="..\..\src\addon\client.cpp" />
 		<Unit filename="..\..\src\addon\client.hpp" />
+		<Unit filename="..\..\src\addon\info.cpp" />
 		<Unit filename="..\..\src\addon\info.hpp" />
 		<Unit filename="..\..\src\addon\manager.cpp" />
 		<Unit filename="..\..\src\addon\manager.hpp" />
