CB projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -88,6 +88,8 @@
 		<Unit filename="..\..\src\addon\info.hpp" />
 		<Unit filename="..\..\src\addon\manager.cpp" />
 		<Unit filename="..\..\src\addon\manager.hpp" />
+		<Unit filename="..\..\src\addon\manager_ui.cpp" />
+		<Unit filename="..\..\src\addon\manager_ui.hpp" />
 		<Unit filename="..\..\src\addon\validation.cpp" />
 		<Unit filename="..\..\src\addon\validation.hpp" />
 		<Unit filename="..\..\src\ai\actions.cpp" />
