CB projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -206,6 +206,10 @@
 		<Unit filename="..\..\src\display.hpp" />
 		<Unit filename="..\..\src\editor\action.cpp" />
 		<Unit filename="..\..\src\editor\action.hpp" />
+		<Unit filename="..\..\src\editor\action\action_label.cpp" />
+		<Unit filename="..\..\src\editor\action\action_label.hpp" />
+		<Unit filename="..\..\src\editor\action\mouse\mouse_action_map_label.cpp" />
+		<Unit filename="..\..\src\editor\action\mouse\mouse_action_map_label.hpp" />
 		<Unit filename="..\..\src\editor\action_base.hpp" />
 		<Unit filename="..\..\src\editor\brush.cpp" />
 		<Unit filename="..\..\src\editor\brush.hpp" />
