CB projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -84,12 +84,16 @@
 		<Unit filename="..\..\src\actions.hpp" />
 		<Unit filename="..\..\src\addon\client.cpp" />
 		<Unit filename="..\..\src\addon\client.hpp" />
+		<Unit filename="..\..\src\addon\dep.cpp" />
+		<Unit filename="..\..\src\addon\dep.hpp" />
 		<Unit filename="..\..\src\addon\info.cpp" />
 		<Unit filename="..\..\src\addon\info.hpp" />
 		<Unit filename="..\..\src\addon\manager.cpp" />
 		<Unit filename="..\..\src\addon\manager.hpp" />
 		<Unit filename="..\..\src\addon\manager_ui.cpp" />
 		<Unit filename="..\..\src\addon\manager_ui.hpp" />
+		<Unit filename="..\..\src\addon\state.cpp" />
+		<Unit filename="..\..\src\addon\state.hpp" />
 		<Unit filename="..\..\src\addon\validation.cpp" />
 		<Unit filename="..\..\src\addon\validation.hpp" />
 		<Unit filename="..\..\src\ai\actions.cpp" />
