eclipse plugin: disable specific activities...
...instead of the whole jdt library.

This fixes the opening of the files in the editor.

--- a/utils/umc_dev/org.wesnoth/plugin.xml
+++ b/utils/umc_dev/org.wesnoth/plugin.xml
@@ -839,7 +839,8 @@
     <activityPatternBinding  activityId="org.wesnoth.product.disableextra" pattern=".*/org.eclipse.ui.actions.showKeyAssistHandler.*"> </activityPatternBinding>
     <activityPatternBinding  activityId="org.wesnoth.product.disableextra" pattern=".*/org.eclipse.ui.cheatsheets.actions.CheatSheetHelpMenuAction.*"> </activityPatternBinding>
     <activityPatternBinding  activityId="org.wesnoth.product.disableextra" pattern=".*/org.eclipse.mylyn.task.*"> </activityPatternBinding>
-    <activityPatternBinding  activityId="org.wesnoth.product.disableextra" pattern=".*/org.eclipse.jdt.*"> </activityPatternBinding>
+    <activityPatternBinding  activityId="org.wesnoth.product.disableextra" pattern=".*/org.eclipse.jdt.ui.*"> </activityPatternBinding>
+    <activityPatternBinding  activityId="org.wesnoth.product.disableextra" pattern=".*/org.eclipse.jdt.junit.*"> </activityPatternBinding>
     <activityPatternBinding  activityId="org.wesnoth.product.disableextra" pattern=".*/org.eclipse.xtend.*"> </activityPatternBinding>
     <activityPatternBinding  activityId="org.wesnoth.product.disableextra" pattern=".*/org.eclipse.team.*"> </activityPatternBinding>
     <activityPatternBinding  activityId="org.wesnoth.product.disableextra" pattern=".*/org.eclipse.wst.*"> </activityPatternBinding>
