Cb projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -217,6 +217,8 @@
 		<Unit filename="..\..\src\editor\action_base.hpp" />
 		<Unit filename="..\..\src\editor\brush.cpp" />
 		<Unit filename="..\..\src\editor\brush.hpp" />
+		<Unit filename="..\..\src\editor\brush_bar.cpp" />
+		<Unit filename="..\..\src\editor\brush_bar.hpp" />
 		<Unit filename="..\..\src\editor\editor_common.hpp" />
 		<Unit filename="..\..\src\editor\editor_controller.cpp" />
 		<Unit filename="..\..\src\editor\editor_controller.hpp" />
@@ -228,8 +230,6 @@
 		<Unit filename="..\..\src\editor\editor_main.hpp" />
 		<Unit filename="..\..\src\editor\editor_map.cpp" />
 		<Unit filename="..\..\src\editor\editor_map.hpp" />
-		<Unit filename="..\..\src\editor\editor_palettes.cpp" />
-		<Unit filename="..\..\src\editor\editor_palettes.hpp" />
 		<Unit filename="..\..\src\editor\editor_preferences.cpp" />
 		<Unit filename="..\..\src\editor\editor_preferences.hpp" />
 		<Unit filename="..\..\src\editor\map_context.cpp" />
@@ -238,6 +238,10 @@
 		<Unit filename="..\..\src\editor\map_fragment.hpp" />
 		<Unit filename="..\..\src\editor\mouse_action.cpp" />
 		<Unit filename="..\..\src\editor\mouse_action.hpp" />
+		<Unit filename="..\..\src\editor\palette\editor_palettes.cpp" />
+		<Unit filename="..\..\src\editor\palette\editor_palettes.hpp" />
+		<Unit filename="..\..\src\editor\palette\terrain_palettes.cpp" />
+		<Unit filename="..\..\src\editor\palette\terrain_palettes.hpp" />
 		<Unit filename="..\..\src\events.cpp" />
 		<Unit filename="..\..\src\events.hpp" />
 		<Unit filename="..\..\src\filechooser.cpp" />
